@@ -16,6 +16,8 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<argLine>-XX:+EnableDynamicAgentLoading</argLine>
+
 		<sonar.host.url>http://localhost:9000</sonar.host.url>
 		<sonar.projectName>Aqualure</sonar.projectName>
 	</properties>
